--- a/client/login.html
+++ b/client/login.html
@@ -1,52 +1,26 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Node Rest Token</title>
-  	<script src="js/jquery-1.12.2.min.js" type="text/javascript"></script>
-  </head>
-  <body>   
-    <h1 >Login</h1>
-    <label>Email</label><input type="text" placeholder="example@example.com" id="email">
-    <label>Password</label><input type="password" placeholder="Password" id="password">
-    <button type="button" id="login">Login</button><br/>
-    <div id="content"></div>
-    <br/>
-    <a href="register.html">Create an account </a>
+     <head>
+      <title>Client Rest Token</title>
+      <script src="node_modules/angular/angular.min.js"></script>
+    </head>
+    <body ng-app="resttokenclient">   
+      <div class="main" ng-controller="LoginController">
+          <div class="container">  
+            <h1>{{ title }}</h1>
+            <h2>{{ page }}</h2>
+            <label>Email</label><input type="text" ng-model="user.email" placeholder="Email">
+            <label>Password</label><input type="password" ng-model="user.password" placeholder="Password">
+            <button type="button" ng-click="login()">Login</button><br/>
+            <div>{{content}}</div>
+          </div>
+      </div>
+      <a href="register.html">Create an account </a>
 
-    <script type="text/javascript">
-        function login(){
-            var email = $("#email").val();
-            var password = $("#password").val();
+      <!-- Modules -->
+      <script src="js/app.js"></script>
 
-            var url = "http://localhost:3000/users/login";
-            var data = {email: email, password: password};
-
-            $.post( url, data, function( result ) {
-              if(result.type == true){                
-                localStorage.setItem("token", result.data.token);
-                window.location.href = "index.html";
-              }else{
-                $("#content").html(result.data);
-              }
-            });
-        }
-
-        $( document ).ready(function() {
-            $("#login").click(function () { 
-                login(); 
-            } );
-            $("#email").keypress(function( event ) {
-                if ( event.which == 13 ) {
-                   login();
-                } 
-            } );
-            $("#password").keypress(function( event ) {
-                if ( event.which == 13 ) {
-                   login();
-                }
-            } );
-        });
-
-    </script>
+      <!-- Controllers -->
+      <script src="js/controllers/LoginController.js"></script>
     </body>
 </html>
