--- a/client/register.html
+++ b/client/register.html
@@ -1,42 +1,26 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Node Rest Token</title>
-    <script src="js/jquery-1.12.2.min.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <h1 >Register</h1>
-    <label>Email</label>
-    <input type="email" placeholder="example@example.com" id="email">
-    <label>Password</label>
-    <input type="password" placeholder="Password" id="password">
-    <input type='button' value='Register' id="register" />
-    <br/>
-    <div id="content"></div>
-    <br/>
-    <a href="login.html">Click here to login</a>
-    <script type="text/javascript">    
-       $( document ).ready(function() {
-          $("#register").click(function () { 
-            var email = $("#email").val();
-            var password = $("#password").val();
+     <head>
+      <title>Client Rest Token</title>
+      <script src="node_modules/angular/angular.min.js"></script>
+    </head>
+    <body ng-app="resttokenclient">  
+      <div class="main" ng-controller="RegisterController">
+          <div class="container">  
+            <h1>{{ title }}</h1>
+            <h2>{{ page }}</h2>
+            <label>Email</label><input type="text" ng-model="user.email" placeholder="Email">
+            <label>Password</label><input type="password" ng-model="user.password" placeholder="Password">
+            <button type="button" ng-click="register()">Register</button><br/>
+            <div>{{content}}</div>
+          </div>
+      </div>
+      <a href="login.html">go to login </a>
 
-            var url = "http://localhost:3000/users/signin";
-            var data = {
-              email: email, 
-              password: password,
-            };
-            
-            $.post( url, data, function( result ) {
-                if(result.type == true){
-                  localStorage.setItem("token", result.data.token);
-                  window.location.href = "index.html";
-                }else{
-                  $("#content").html(result.data);
-                }
-              });
-          } );
-      });
-    </script>
-  </body>
+      <!-- Modules -->
+      <script src="js/app.js"></script>
+
+      <!-- Controllers -->
+      <script src="js/controllers/RegisterController.js"></script>
+    </body>
 </html>
